[package]
edition = "2021"
name = "ss-uri-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.6", features = ["derive"]}
serde = {version = "1.0.135", features = ["derive"]}
serde_json = "1.0.79"
ss-uri = "0.1.0"
